<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item android:id="@+id/menu_add_media"
        android:title="@string/menu_add_media"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        
         />
    
      <item android:id="@+id/menu_capture_media"
        android:title="@string/menu_capture_media"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        
         />
    
     <item android:id="@+id/menu_save_media"
        android:title="@string/menu_save_media"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        
         />
    
     
     <item android:id="@+id/menu_share_media"
        android:title="@string/menu_share_media"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        
         />
    
     <item android:id="@+id/menu_play_media"
        android:title="@string/menu_play_media"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        
         />
    
     
    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
    
    
</menu>
