<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
         <item android:id="@+id/menu_new_project"
        android:title="@string/menu_new_project"
        android:showAsAction="ifRoom" />
         
  <!--    <item android:id="@+id/menu_projects"
        android:title="@string/menu_projects"
        android:showAsAction="withText" 
       android:enabled="true" android:visible="true"/>
        -->
      
      <item android:id="@+id/menu_lessons"
        android:title="@string/menu_lessons"
        android:showAsAction="withText"         
       android:enabled="true" android:visible="true"/>
      
      <item android:id="@+id/menu_glossary"
        android:title="@string/menu_glossary"
        android:showAsAction="withText"                 
       android:enabled="true" android:visible="true"/>
      
       <item android:id="@+id/menu_contacts"
        android:title="@string/menu_contacts"
         android:showAsAction="withText"       
       android:enabled="true" android:visible="true"/>
      
       <item android:id="@+id/menu_archive"
        android:title="@string/menu_archive"
          android:showAsAction="withText" 
        
       android:enabled="true" android:visible="true"/>
       
    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
       android:enabled="true" android:visible="true"/>
    
</menu>
