<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    	  <item android:id="@+id/menu_overlay_camera"
        android:title="@string/menu_overlay_camera"
        android:showAsAction="always" 
       android:enabled="true" android:visible="true"/>
    	  
        <item android:id="@+id/menu_projects"
        android:title="@string/menu_projects"
        android:showAsAction="always" 
       android:enabled="true" android:visible="true"/>
      
      <item android:id="@+id/menu_glossary"
        android:title="@string/menu_glossary"
        android:showAsAction="withText"                 
       android:enabled="true" android:visible="true"/>
       
    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
       android:enabled="true" android:visible="true"/>
    
</menu>
