<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <EditText
        android:id="@+id/etStoryTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="10dp"
        android:hint="@string/story_publish_story_title"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />
    
    <EditText
        android:id="@+id/etStoryDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/story_publish_describe_hint"
        android:inputType="textMultiLine"
        android:lines="3" 
        >
    </EditText>

    <LinearLayout
        android:id="@+id/project_tag_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" />

    <RelativeLayout
        android:id="@+id/locationAndSectionContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_story_section_label"
            style="@style/LabelGeneral"
            android:layout_width="100dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="left"
            android:paddingLeft="24dp"
            android:paddingTop="8dp"
            android:text="@string/label_section" />

        <TextView
            android:id="@+id/tv_story_section"
            style="@style/TextGeneral"
            android:layout_alignBottom="@id/tv_story_section_label"
            android:layout_toRightOf="@id/tv_story_section_label"
            android:gravity="left"
            android:paddingTop="8dp" />

        <TextView
            android:id="@+id/tv_story_location_label"
            style="@style/LabelGeneral"
            android:layout_width="100dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/tv_story_section_label"
            android:gravity="left"
            android:paddingLeft="24dp"
            android:paddingTop="8dp"
            android:text="@string/label_location" />

        <TextView
            android:id="@+id/tv_story_location"
            style="@style/TextGeneral"
            android:layout_alignBottom="@id/tv_story_location_label"
            android:layout_toRightOf="@id/tv_story_location_label"
            android:gravity="left"
            android:paddingTop="8dp" />
    </RelativeLayout>

</LinearLayout>